outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval-7876545270085545556_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where distance contributes 70% and importance (inverse of node degree) contributes 30%, aiming to balance proximity with strategic node selection.}
                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where distance contributes 70% and importance (inverse of node degree) contributes 30%, aiming to balance proximity with strategic node selection.}
                                                                                                                                                                  ^
SyntaxError: unmatched '}'
